--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,7 @@
 {
-  "extends": ["plugin:@tanstack/eslint-plugin-query/recommended", "next/core-web-vitals"]
+  "extends": [
+    "plugin:@tanstack/eslint-plugin-query/recommended",
+    "next/core-web-vitals",
+    "plugin:storybook/recommended"
+  ]
 }
