--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.1",
     "@tanstack/react-query": "^5.18.1",
     "clsx": "^2.1.0",
     "next": "14.1.0",
