--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "^2.1.1",
     "@tanstack/react-query": "^5.18.1",
     "clsx": "^2.1.0",
+    "lodash.merge": "^4.6.2",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18"
@@ -28,6 +29,7 @@
     "@storybook/react": "^7.6.13",
     "@storybook/test": "^7.6.13",
     "@tanstack/eslint-plugin-query": "^5.18.1",
+    "@types/lodash.merge": "^4.6.9",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
