Refactors movie lists into single Movies component with infinite scroll

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "lodash.merge": "^4.6.2",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-intersection-observer": "^9.8.0"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^7.6.13",
